crates/pg_syntax/tests/snapshots/postgres_regress/security_label@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE FUNCTION seclabel_four() RETURNS integer AS $$SELECT 4$$ language sql;
---
CreateFunctionStmt@0..77
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..29 "seclabel_four"
  Ascii40@29..30 "("
  Ascii41@30..31 ")"
  Whitespace@31..32 " "
  Returns@32..39 "RETURNS"
  Whitespace@39..40 " "
  TypeName@40..47
    Integer@40..47 "integer"
  Whitespace@47..48 " "
  DefElem@48..63
    As@48..50 "AS"
    Whitespace@50..51 " "
    List@51..63
      Sconst@51..63 "$$SELECT 4$$"
  Whitespace@63..64 " "
  DefElem@64..76
    Language@64..72 "language"
    Whitespace@72..73 " "
    SqlP@73..76 "sql"
  Ascii59@76..77 ";"

