crates/pg_syntax/tests/snapshots/postgres_regress/security_label@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE DOMAIN seclabel_domain AS text;
---
CreateDomainStmt@0..38
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  DomainP@7..13 "DOMAIN"
  Whitespace@13..14 " "
  Ident@14..29 "seclabel_domain"
  Whitespace@29..30 " "
  As@30..32 "AS"
  Whitespace@32..33 " "
  TypeName@33..37
    TextP@33..37 "text"
  Ascii59@37..38 ";"

