crates/pg_syntax/tests/snapshots/postgres_regress/security_label@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE seclabel_tbl2 (x int, y text);"
---
CreateStmt@0..43
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..26
    Ident@13..26 "seclabel_tbl2"
  Whitespace@26..27 " "
  Ascii40@27..28 "("
  ColumnDef@28..33
    Ident@28..29 "x"
    Whitespace@29..30 " "
    TypeName@30..33
      IntP@30..33 "int"
  Ascii44@33..34 ","
  Whitespace@34..35 " "
  ColumnDef@35..41
    Ident@35..36 "y"
    Whitespace@36..37 " "
    TypeName@37..41
      TextP@37..41 "text"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

