crates/pg_syntax/tests/snapshots/postgres_regress/security_label@9.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE VIEW seclabel_view1 AS SELECT * FROM seclabel_tbl2;
---
ViewStmt@0..58
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  View@7..11 "VIEW"
  Whitespace@11..12 " "
  RangeVar@12..26
    Ident@12..26 "seclabel_view1"
  Whitespace@26..27 " "
  As@27..29 "AS"
  Whitespace@29..30 " "
  SelectStmt@30..57
    Select@30..36 "SELECT"
    Whitespace@36..37 " "
    ResTarget@37..38
      ColumnRef@37..38
        AStar@37..38
          Ascii42@37..38 "*"
    Whitespace@38..39 " "
    From@39..43 "FROM"
    Whitespace@43..44 " "
    RangeVar@44..57
      Ident@44..57 "seclabel_tbl2"
  Ascii59@57..58 ";"

